--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,6 @@ include LICENSE
 recursive-include django_persian_currency *
 prune */migrations
 prune */tests
-prune myproject
+prune config
 prune .*
 exclude manage.py
